# mlx

./: .gitignore  CLAUDE.md  README.md  conftest.py  install.sh  pyproject.toml  serve-tunnel.sh
reference/anthropic-api/: NOTICE.md  WIRE_FORMAT.md
src/mlx_runner/: __init__.py  __main__.py  anthropic_server.py  catalog.py  cli.py  config.py  doctor.py  embeddings.py  hardware.py  memory.py  runner.py
src/mlx_runner/anthropic_server/: __init__.py  _anthropic_error_body.py  _anthropic_error_init.py  _constant_time_eq.py  _constants.py  _content_to_text.py  _count_tokens.py  _generation_config.py  _input_tokens.py  _model_object.py  _models_list.py  _output_tokens.py  _stop_sequence_filter_feed.py  _stop_sequence_filter_flush.py  _stop_sequence_filter_init.py  anthropic_error.py  build_message.py  content_block_delta_event.py  content_block_start_event.py  content_block_stop_event.py  generate_full.py  generate_stream.py  make_handler.py  message_delta_event.py  message_start_event.py  message_stop_event.py  new_message_id.py  parse_request.py  parsed_request.py  ping_event.py  serve.py  sse_event.py  stop_sequence_filter.py
src/mlx_runner/catalog/: __init__.py  _constants.py  catalog_model.py  fitting_models.py  recommend_model.py
src/mlx_runner/cli/: __init__.py  _add_generation_args.py  _config_from_args.py  _constants.py  (+25 more)
tests/: test_anthropic_conformance.py  test_anthropic_server.py  test_cli.py  test_config.py  test_hardware.py  test_memory.py  test_memory_guard.py  test_runner.py  test_runner_load_compat.py  test_serve_api_key_resolution.py  test_setup.py
(+71 files in other folders)
